--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
-# built application files
-*.apk
-*.ap_
-
-# files for the dex VM
-*.dex
-
-# Java class files
 *.class
 
-# generated files
-bin/
-gen/
+# Package Files #
+*.war
+*.ear
 
-# Local configuration file (sdk path, etc)
-local.properties
+# Build Folder #
+/Calculadora/build/*
 
-# Eclipse project files
-.classpath
-.project
+# White List #
+!/Calculadora/build/apk/
